Fix spacing at the beginning of the primary section

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -1,5 +1,6 @@
 #primary {
   min-height: calc(100vh - 200px);
+  margin-top: -15px;
 }
 
 .entry-content,
